WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234826
[LFC][IFC] Incorrect word-spacing gaps when logical order != visual order (bidi)
https://bugs.webkit.org/show_bug.cgi?id=234826
Summary
[LFC][IFC] Incorrect word-spacing gaps when logical order != visual order (bidi)
alan
Reported
2022-01-03 11:08:18 PST
ssia
Attachments
Patch
(3.66 KB, patch)
2022-01-03 11:14 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(3.84 KB, patch)
2022-01-03 13:59 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-01-03 11:14:33 PST
Created
attachment 448251
[details]
Patch
alan
Comment 2
2022-01-03 13:59:34 PST
Created
attachment 448256
[details]
Patch
EWS
Comment 3
2022-01-03 17:37:15 PST
Committed
r287558
(
245693@main
): <
https://commits.webkit.org/245693@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 448256
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-01-03 17:38:24 PST
<
rdar://problem/87073871
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug