[LFC][IFC] Incorrect word-spacing gaps when logical order != visual order (bidi) https://bugs.webkit.org/show_bug.cgi?id=234826

Reviewed by Antti Koivisto.

Source/WebCore:

Add missing condition from the (rtl) word-spacing patch, where we don't merge
adjacent text runs when word-spacing is not 0 and the run is a word-separator.
(we can't merge a whitespace run with a non-whitepace run and expect that the word-spacing
margin is always on the left side (visual reordering)).

Test: fast/text/simple-bidi-word-spacing.html

* layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::appendTextContent):

LayoutTests:

* fast/text/simple-bidi-word-spacing-expected.html: Added.
* fast/text/simple-bidi-word-spacing.html: Added.



Canonical link: https://commits.webkit.org/245693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287558 268f45cc-cd09-0410-ab3c-d52691b4dbfc